tests/paczka1/fuzzy1/79841867.err
Error in line 1: bO96RG3q A556 84,7
Error in line 9: ocYng9stYd A369 97,7
Error in line 13: wJWS7ctB S989 9,8
Error in line 12: CUEA S989 47,2
Error in line 10: o3tJ9cV A697 9,1
Error in line 11: bO96RG3q S989 77,3
Error in line 20: CUEA A369 6,1
Error in line 30: ocYng9stYd A369 38,9
Error in line 34: bO96RG3q A556 26,36
Error in line 37: wJWS7ctB A697 87,5
Error in line 35: aBm7Jm A556 90,5
